--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="con-links">
           <a
           target="_blank"
-          href="https://www.instagram.com/projetoestrelaorg/"
+          href="https://www.instagram.com/habitar.fernandaauler/"
         >
           <i class="bx bxl-instagram-alt"></i>
           <span> Instagram </span>
         </a>
-          <a target="_blank" href="https://www.projetoestrela.org">
+          <a target="_blank" href="mailto:habitar.fernandaauler@gmail.com">
             <i class="bx bxs-envelope" style="color: #ffffff"></i>
             <span> Email </span>
           </a>
-          <a target="_blank" href="https://www.facebook.com/projetoestrelaorg">
+          <a target="_blank" href="https://api.whatsapp.com/send?phone=5512996630907">
             <i class="bx bxl-whatsapp" style="color: #ffffff"></i>
             <span> Whatsapp </span>
           </a>
